# edu-wgpu

./: Cargo.toml  build.rs
src/: camera.rs  equirectangular.wgsl  hdr.rs  hdr.wgsl  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  sky.wgsl  texture.rs
