[package]
name = "edu-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.0"
cgmath = "0.18.0"
env_logger = "0.11.8"
fs_extra = "1.3.0"
glob = "0.3.2"
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
wgpu = "25.0.0"
winit = { version = "0.29", features = ["android-native-activity"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
